--- a/public/global.css
+++ b/public/global.css
@@ -10,6 +10,19 @@ body {
   height: 100%;
 }
 
-.panel.active{
-  background-color: white!important;
+.panel.active {
+  background-color: white !important;
+}
+.game_board.disable::after {
+  position: absolute;
+  content: "Dont Click Anythig It Won't Work";
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
 }
